--- a/Level0/Unit4/DataGrammar/aulas/aula5/audio/manifest.json
+++ b/Level0/Unit4/DataGrammar/aulas/aula5/audio/manifest.json
@@ -4,7 +4,7 @@
     "language": null,
     "rate": "1",
     "pitch": "0",
-    "generatedAt": "2026-02-27T22:06:43.141Z"
+    "generatedAt": "2026-02-27T22:18:39.773Z"
   },
   "items": [
     {
@@ -60,15 +60,15 @@
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Usamos palavrinhas antes das palavras.",
-      "file": "pt-br-e19148da47da4a51f8bf0d7d9cc98a203146468e.mp3"
+      "text": "Usamos palavrinhas especiais antes das palavras.",
+      "file": "pt-br-5363c610c6e1bfb18819357dc326de2866cad6b2.mp3"
     },
     {
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Temos duas formas:",
-      "file": "pt-br-17ddf7144bd7976b37c4e501e6d61e1789e50364.mp3"
+      "text": "Temos duas palavrinhas especiais:",
+      "file": "pt-br-5d032fcb33c5f7d2a6fcd917a9c2e16d2b0e7d2a.mp3"
     },
     {
       "kind": "text-bold-large",
@@ -463,13 +463,6 @@
       "file": "en-us-2ee3512c1db28c38fa5f75bf3f0e4067271c56f8.mp3"
     },
     {
-      "kind": "text",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Agora:",
-      "file": "pt-br-5967d7a003dab2fc9842cd0a49aea19e54099430.mp3"
-    },
-    {
       "kind": "text-bold-large",
       "lang": "en-US",
       "voice": "en-US-Standard-I",
@@ -608,41 +601,6 @@
       "voice": "pt-BR-Standard-C",
       "text": "Deus é bom",
       "file": "pt-br-2215eff837a3fc1d7d7644695c26e7e383ad3ce7.mp3"
-    },
-    {
-      "kind": "subtitle",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Vamos lembrar",
-      "file": "pt-br-8c56cdc1a7ee721df884a412bdbb24241279c29f.mp3"
-    },
-    {
-      "kind": "text",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Para falar de uma coisa, usamos uma palavrinha antes do nome.",
-      "file": "pt-br-fa5acc148a06b7927e5067cc0f57963ed708d48d.mp3"
-    },
-    {
-      "kind": "text",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Temos duas formas.",
-      "file": "pt-br-4e988550b29ac30aec262d1b9cb414492bbf195c.mp3"
-    },
-    {
-      "kind": "text",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Uma forma usamos com muitas palavras.",
-      "file": "pt-br-8c28204032b2418a057c8908d3b4465e8fc8b3d5.mp3"
-    },
-    {
-      "kind": "text",
-      "lang": "pt-BR",
-      "voice": "pt-BR-Standard-C",
-      "text": "Outra forma usamos com palavras que começam com A, E, I, O, U.",
-      "file": "pt-br-db8be02f9cb11c74d2ddc7ec0eb0f6462d0860f8.mp3"
     },
     {
       "kind": "subtitle",
