--- a/Level0/Unit4/DataGrammarDialogo/aulas/aula5/audio/manifest.json
+++ b/Level0/Unit4/DataGrammarDialogo/aulas/aula5/audio/manifest.json
@@ -4,7 +4,7 @@
     "language": null,
     "rate": "1",
     "pitch": "0",
-    "generatedAt": "2026-03-01T18:49:45.072Z"
+    "generatedAt": "2026-03-01T18:58:50.938Z"
   },
   "items": [
     {
@@ -305,8 +305,15 @@
       "kind": "text",
       "lang": "pt-BR",
       "voice": "pt-BR-Standard-C",
-      "text": "Usamos com palavras que começam com A, E, I, O, U.",
-      "file": "pt-br-e50cee205224abb4cf213ececa70c08eda8dde1f.mp3"
+      "text": "Usamos com palavras que começam com essas letras:",
+      "file": "pt-br-4555b0a1f8268e99598ef9aeea23186c89a50679.mp3"
+    },
+    {
+      "kind": "text-bold-large",
+      "lang": "en-US",
+      "voice": "en-US-Standard-I",
+      "text": "A, E, I, O, U.",
+      "file": "en-us-17fd0703ea38b6572dff437c5fc38e4bb6f6b419.mp3"
     },
     {
       "kind": "text",
