--- a/Level0/Unit4/DataDialogo/sounds/dialogo-manifest.json
+++ b/Level0/Unit4/DataDialogo/sounds/dialogo-manifest.json
@@ -64,6 +64,15 @@
       "student": {
         "audio": "b007_student.mp3"
       }
+    },
+    {
+      "index": 8,
+      "robot": {
+        "audio": "b008_robot.mp3"
+      },
+      "student": {
+        "audio": "b008_student.mp3"
+      }
     }
   ]
 }
